# modyaml

./: .gitignore  pyproject.toml  setup.cfg
.github/workflows/: python-publish.yml
modyaml.egg-info/: PKG-INFO  SOURCES.txt
src/modyaml/: __init__.py
