[build-system]
requires = ["setuptools>=61.0", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "modyaml"
description = "Modular Yaml for configuration management"
authors = [
    {name = "AlexMKX", email = "your.email@example.com"},
]
license = {text = "BSD 3-Clause License"}
classifiers = [
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
]
dynamic = ["version", "dependencies"]
readme = "readme.md"

[tool.setuptools_scm]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}