[metadata]
name = ModYaml
version = 0.0.2
author = AlexMKX
description = Modular Yaml for configuration management
long_description = file: readme.md
long_description_content_type = text/markdown
keywords = HomeAssistant
license = BSD 3-Clause License
classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3

[options]
packages = find:
zip_safe = True
include_package_data = True
name = "modyaml"
install_requires =
    yaml_include, gcsfs, jinja2, fsspec
